# shrinkme

./: .gitignore  CHANGELOG.md  MANIFEST.in  QUICKSTART.md  README.md  SECURITY.md  compress.py  pyproject.toml  requirements.txt  setup.py
examples/: basic_usage.py  batch_process.py  with_resizing.py
shrinkme/: __init__.py  cli.py  core.py  utils.py
